# Ornitologia

./: .buildconfig  Changelog.md  Ornitlogia.kdev4  Ornitologia.kdev4  TODO.md  meson.build
.kdev4/: Ornitlogia.kdev4
builddir/: .ninja_log  build.ninja  compile_commands.json
builddir/meson-info/: intro-buildsystem_files.json  intro-dependencies.json  intro-installed.json  intro-projectinfo.json  intro-targets.json  intro-tests.json  meson-info.json
builddir/meson-logs/: meson-log.txt
builddir/meson-private/: coredata.dat.prev
src/: CAppTest.cpp  Changelog.md  main.cpp  meson.build  test.cc
src/fjv/: CFjvApplication.cpp  cAppDialog.cpp
src/fjv/control/: cExcepcion.hpp  cFecha.cpp  cFecha.hpp  cLog.cpp  cObservacion.cpp  cObservacion.hpp  testcFecha.cpp  testcFecha.hpp
src/include/: CAppTest.hpp  CFjvApplication.hpp  cAppDialog.hpp  fjvcontrol.hpp
src/include/control/: cExcepcion.hpp  cFecha.hpp  cLog.hpp  cObservacion.hpp
src/test/: CAppTestTest.cpp  CFjvApplicationTest.cpp  cFechaTest.cc  cObservacionTest.cc  fjvtest.cc  meson.build
