project(
  'ornitlogia',
  ['cpp', 'c'],
version : '0.1.0',
meson_version : '>= 0.50.0',
default_options : ['warning_level=2', 'cpp_std=gnu++2a']
)

#Archivos include_directories
fjv_include =include_directories(['src/fjv/control',
                                  'src/fjv/'])
cFechasources = (['fjv/control/cFecha.cpp'
                    ])                                

subdir('src')

